# DecisionJury

./: .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  pyproject.toml  start_all.bat
.claude/: settings.json
backend/: config.py  database.py  main.py  migrate.py  models.py  requirements.txt  schemas.py
backend/app/agents/: con_agent.py  input_parser.py  judge_agent.py  pro_agent.py
backend/app/orchestrator/: adapter.py  decision_flow.py  demo.py
backend/app/prompts/: con_agent.md  input_parser.md  judge_agent.md  pro_agent.md
backend/app/schemas/: decision.py
backend/routers/: __init__.py  cases.py  chat.py  debate.py  history.py  tools.py  watchlist.py
backend/test/: insert_test_data.py  test.http  test_feedback_quick.py
data/: history_records.json
docs/: 00_AI_Collaboration_Rules.md  01_MVP.md  02_SPEC.md  03_Milestones.md  04_API.md  05_TestPlan.md
frontend/: index.html  package-lock.json  package.json
frontend/.claude/: launch.json
frontend/src/: App.tsx  main.tsx
mcp_tools/: cooling_reminder.py  cost_analyzer.py  logger.py
rag/: data_loader.py  requirements.txt  retriever.py
rag/data/: history_records.json
tests/: conftest.py  test_agent_flow.py  test_cases_router.py  test_chat_router.py  test_cooling_reminder.py  test_cost_analyzer.py  test_debate_router.py  test_feedback_router.py  test_health_route.py  test_history_router.py  test_input_parser.py  test_judge_agent.py  test_llm_client.py  test_logger.py  test_mcp_adapter.py  test_migrate.py  test_rag.py  test_rag_adapter.py  test_trace_route.py  test_watchlist_router.py
(+19 files in other folders)
