[project]
name = "decisionjury"
version = "0.1.0"
description = "DecisionJury MVP backend agent orchestration skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
